apps/staging/identity-provider/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-provider
  namespace: staging
spec:
  selector:
    matchLabels:
      app: identity-provider
  template:
    metadata:
      labels:
        app: identity-provider
    spec:
      containers:
      - envFrom:
        - secretRef:
            name: identity-provider-env
        name: identity-provider
        image: fclebinho/authorize-api:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: identity-provider-service
  namespace: staging
spec:
  selector:
    app: identity-provider
  ports:
  - port: 80
    targetPort: 80
