apps/staging/identity-provider/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: identity-svc
  namespace: staging
spec:
  selector:
    app: identity-app
  ports:
  - port: 8080
