apps/staging/identity-provider/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: identity-provider-ingress
  namespace: staging
  labels:
    name: identity-provider
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    ngninx.ingress.kubernetes.io/rewrite-target: /
spec:
  defaultBackend: 
    ingressClassName: nginx
    tls:
    - hosts:
      - identity.staging.plussoftware.com.br
      secretName: letsencrypt-staging-tls
    rules:
    - host: identity.staging.plussoftware.com.br
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: identity-provider-svc
              port:
                number: 8080
